--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -5,6 +5,10 @@
 		width: 90%;
 		margin: 0 auto;
 		text-align: center;
+
+		@media screen and (min-width: 768px) {
+			width: 85%;
+		}
 	}
 	&__header {
 
