--- a/scss/partials/_event.scss
+++ b/scss/partials/_event.scss
@@ -4,6 +4,10 @@
 	&__container {
 		width: 90%;
 		margin: 0 auto;
+
+		@media screen and (min-width: 768px) {
+			width: 85%;
+		}
 	}
 	&__header {
 		text-align: center;
@@ -23,20 +27,38 @@
 		font-size: 1.8em;
 		color: $color2;
 		margin-top: .5em;
+
+		@media screen and (min-width: 1024px) {
+			font-size: 1.5em;
+		}
 	}
 	&__copy {
 		text-align: center;
 		font-size: 1.2em;
 		font-weight: $light;
 		line-height: 1.6;
+
+		@media screen and (min-width: 1024px) {
+			font-size: 1.1em;
+		}
 	}
 	//items
 	&__items-container {
 		margin-top: 3em;
+
+		@media screen and (min-width: 1024px) {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 	&__item-one,
 	&__item-two {
 		padding: 1em 1em 2em;
+
+		@media screen and (min-width: 1024px) {
+			width: 47%;
+			height: 40em;
+		}
 	}
 	&__item-one {
 		background-color: #EFEAE3;
