--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -11,6 +11,15 @@
 	&__container {
 		width: 90%;
 		margin: 0 auto;
+
+		@media screen and (min-width: 768px) {
+			width: 85%;
+		}
+
+		@media screen and (min-width: 1024px) {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 	&__icons-container {
 		display: flex;
@@ -72,6 +81,10 @@
 		&:hover .header__icon-bar:after {
 			width: 30px;
 			left: .5em;
+		}
+
+		@media screen and (min-width: 1024px) {
+			display: none;
 		}
 	}
 }
