--- a/scss/partials/_room.scss
+++ b/scss/partials/_room.scss
@@ -2,9 +2,17 @@
 	padding: 4em 0 3em;
 	position: relative;
 
+	@media screen and (min-width: 1024px) {
+		padding-bottom: 4em;
+	}
+
 	&__container {
 		width: 90%;
 		margin: 0 auto;
+
+		@media screen and (min-width: 768px) {
+			width: 85%;
+		}
 	}
 	&__header {
 		text-align: center;
@@ -23,25 +31,50 @@
 		font-size: 1.8em;
 		color: $color2;
 		line-height: 1.4;
+
+		@media screen and (min-width: 1024px) {
+			font-size: 1.5em;
+		}
 	}
 	//Items
 	&__items-container {
-
+		
+		@media screen and (min-width: 1024px) {
+			margin-top: 5em;
+		}
 	}
 	&__item {
 		margin-bottom: 4em;
+
+		@media screen and (min-width: 1024px) {
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+
+			margin-bottom: 8em;
+		}
+	}
+	&__item--margin {
+		margin-bottom: 0;
 	}
 	&__item-room-one,
 	&__item-room-two,
 	&__item-room-three {
 		margin: 0;
 		padding: 0;
+
+		@media screen and (min-width: 1024px) {
+			width: 49%
+		}
 	}
 	&__item-room {
 
 	}
 	&__item-copy-container {
 
+		@media screen and (min-width: 1024px) {
+			width: 48%
+		}
 	}
 	&__item-title {
 		font-family: $titleFont;
@@ -61,17 +94,36 @@
 			bottom: -.1em;
 			left: 0;
 		}
+
+		@media screen and (min-width: 1024px) {
+			margin-top: 0;
+		}
 	}
 	&__item-subtitle {
 		text-transform: uppercase;
 		font-size: 1.7em;
 		font-weight: $medium;
 		margin: .5em 0 .8em;
+
+		@media screen and (min-width: 1024px) {
+			font-size: 1.4em;
+		}
 	}
 	&__item-text {
 		margin-bottom: 2.5em;
 		font-size: 1.2em;
 		font-weight: $light;
 		line-height: 1.6;
+
+		@media screen and (min-width: 1024px) {
+			font-size: 1.1em;
+		}
+	}
+	&__button {
+
+		@media screen and (min-width: 1024px) {
+			line-height: 2;
+			font-size: 1em;
+		}
 	}
 }
